--- a/index.html
+++ b/index.html
@@ -13,24 +13,25 @@
 </head>
 
 <body>
+ <a href="#main-content" class="skip-link">Skip to main content</a>
   <div class="container">
-    <div class="site-header">
+    <header class="site-header" role="banner">
       <h1>Jam Box Studios</h1>
-      <div class="main-nav">
+      <nav class="main-nav" role="navigation">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Products</a></li>
-          <li><a href="#">Reservation</a></li>
-          <li><a href="#">Studio</a></li>
+          <li><a href="#" itemprop="url">Home</a></li>
+          <li><a href="#" itemprop="url">Products</a></li>
+          <li><a href="#" itemprop="url">Reservation</a></li>
+          <li><a href="#" itemprop="url">Studio</a></li>
         </ul>
-      </div>
-      <img src="https://placekitten.com/1200/900" class="banner">
-    </div>
-    <div class="main-content">
+      </nav>
+      <img src="https://placekitten.com/1200/900" alt="picture of kittens" class="banner">
+    </header>
+    <main id="main-content" class="main-content" role="main" itemscope itemtype="http://schema.org/WebPageElement">
       <h1>Welcome to Jam Box</h1>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus laboriosam praesentium nostrum ipsa eveniet, officia deserunt cumque eius esse enim, ipsam accusantium autem nihil quaerat sequi perferendis optio quia veritatis.</p>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam perferendis expedita sed itaque odit ipsam omnis, eos voluptates magni fugit culpa voluptatibus, inventore eaque, eligendi voluptatum! Voluptate iusto error voluptatibus.</p>
-      <div class="owner">
+      <section class="owner">
         <h1>Meet the owner</h1>
         <ul>
           <li>Name: John Doe</li>
@@ -39,29 +40,30 @@
           <li>Phone: 613-000-0000</li>
         </ul>
         <h1>Address</h1>
-        <p>
-          Jambox Studios
-          123 Guitar Road,
-          Musicville, Danceistan
-          B3T 0L0
-        </p>
-      </div>
-      <div class="contact-section">
+        <address itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"></address>>
+        <span itemprop="streetAddress">Jambox Studios 123 Guitar Road</span>,
+        <span itemprop="addressLocality">Musicville</span>, <span itemprop="addressRegion">Danceistan</span>
+        <span itemprop="postalCode">B3T 0L0</span>
+        </address>
+      </section>
+      <section class="contact-section" role="form">
         <h1>Contact Us</h1>
         <form action="thanks.html">
-          <label>Full Name</label>
-          <input type="text" placeholder="Full Name">
-          <input type="text" placeholder="Email">
-          <input type="text" placeholder="Subject">
-          <b>Your Message</b>
-          <textarea></textarea>
+          <label for="full-name">Full Name</label>
+          <input type="text" id="full-name" name="full-name" placeholder="Full Name">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" placeholder="Email">
+          <label for="subject">Subject</label>
+          <input type="text" id="subject" name="subject" placeholder="Subject">
+          <label for="message">Your Message</label>
+          <textarea id="message" name="message"></textarea>
           <button type="submit">Send</button>
         </form>
-      </div>
-    </div>
-    <div class="site-footer">
+      </section>
+    </main>
+    <footer class="site-footer" role="contentinfo">
       &copy; 2021 Jam Box Studios
-    </div>
+    </footer>
   </div>
 </body>
 
